Intermittent dom/html/test/test_fullscreen-api-race.html | application crashed [@ mozilla::layers::NativeLayerCA::~NativeLayerCA()]
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | --- | wontfix |
| firefox95 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: bradwerth)
References
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(1 file)
Filed by: ctuns [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=352334624&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/ZIr-XIEWSJCgLLxG87oALg/runs/0/artifacts/public/logs/live_backing.log
[task 2021-09-22T06:25:44.184Z] 06:25:44 INFO - TEST-PASS | dom/html/test/test_fullscreen-api-race.html | The window should have been closed
[task 2021-09-22T06:25:44.184Z] 06:25:44 INFO - TEST-FAIL | dom/html/test/test_fullscreen-api-race.html | The author of the test has indicated that flaky timeouts are expected. Reason: Need to wait for potential fullscreen transition
[task 2021-09-22T06:25:44.185Z] 06:25:44 INFO - Buffered messages finished
[task 2021-09-22T06:25:44.185Z] 06:25:44 ERROR - TEST-UNEXPECTED-FAIL | dom/html/test/test_fullscreen-api-race.html | application terminated with exit code 1
[task 2021-09-22T06:25:44.185Z] 06:25:44 INFO - runtests.py | Application ran for: 0:00:38.632353
[task 2021-09-22T06:25:44.186Z] 06:25:44 INFO - zombiecheck | Reading PID log: /var/folders/4h/686ck0gj45b85gqm7msj_jqr000014/T/tmp9m6kktzzpidlog
[task 2021-09-22T06:25:44.186Z] 06:25:44 INFO - ==> process 1506 launched child process 1507
[task 2021-09-22T06:25:44.186Z] 06:25:44 INFO - ==> process 1506 launched child process 1508
[task 2021-09-22T06:25:44.187Z] 06:25:44 INFO - ==> process 1506 launched child process 1509
[task 2021-09-22T06:25:44.187Z] 06:25:44 INFO - ==> process 1506 launched child process 1510
[task 2021-09-22T06:25:44.187Z] 06:25:44 INFO - ==> process 1506 launched child process 1511
[task 2021-09-22T06:25:44.187Z] 06:25:44 INFO - ==> process 1506 launched child process 1512
[task 2021-09-22T06:25:44.188Z] 06:25:44 INFO - ==> process 1506 launched child process 1513
[task 2021-09-22T06:25:44.188Z] 06:25:44 INFO - ==> process 1506 launched child process 1518
[task 2021-09-22T06:25:44.189Z] 06:25:44 INFO - ==> process 1506 launched child process 1519
[task 2021-09-22T06:25:44.189Z] 06:25:44 INFO - ==> process 1506 launched child process 1521
[task 2021-09-22T06:25:44.189Z] 06:25:44 INFO - ==> process 1506 launched child process 1522
[task 2021-09-22T06:25:44.189Z] 06:25:44 INFO - ==> process 1506 launched child process 1527
[task 2021-09-22T06:25:44.190Z] 06:25:44 INFO - ==> process 1506 launched child process 1528
[task 2021-09-22T06:25:44.190Z] 06:25:44 INFO - ==> process 1506 launched child process 1530
[task 2021-09-22T06:25:44.191Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1507
[task 2021-09-22T06:25:44.191Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1508
[task 2021-09-22T06:25:44.191Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1509
[task 2021-09-22T06:25:44.191Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1510
[task 2021-09-22T06:25:44.192Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1511
[task 2021-09-22T06:25:44.192Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1512
[task 2021-09-22T06:25:44.193Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1513
[task 2021-09-22T06:25:44.193Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1518
[task 2021-09-22T06:25:44.193Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1519
[task 2021-09-22T06:25:44.194Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1521
[task 2021-09-22T06:25:44.194Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1522
[task 2021-09-22T06:25:44.194Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1527
[task 2021-09-22T06:25:44.195Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1528
[task 2021-09-22T06:25:44.195Z] 06:25:44 INFO - zombiecheck | Checking for orphan process with PID: 1530
[task 2021-09-22T06:25:44.195Z] 06:25:44 INFO - mozcrash Downloading symbols from: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Ufaf5NBeTgurmvN8_xq5vQ/artifacts/public/build/target.crashreporter-symbols.zip
[task 2021-09-22T06:25:47.707Z] 06:25:47 INFO - mozcrash Copy/paste: /opt/worker/tasks/task_163229160496688/fetches/minidump_stackwalk/minidump_stackwalk /var/folders/4h/686ck0gj45b85gqm7msj_jqr000014/T/tmpp36terid.mozrunner/minidumps/3D1212CD-1123-408A-934F-05D76A4B46EB.dmp /var/folders/4h/686ck0gj45b85gqm7msj_jqr000014/T/tmp1_68aeed
[task 2021-09-22T06:25:53.178Z] 06:25:53 INFO - mozcrash Saved minidump as /opt/worker/tasks/task_163229160496688/build/blobber_upload_dir/3D1212CD-1123-408A-934F-05D76A4B46EB.dmp
[task 2021-09-22T06:25:53.178Z] 06:25:53 INFO - mozcrash Saved app info as /opt/worker/tasks/task_163229160496688/build/blobber_upload_dir/3D1212CD-1123-408A-934F-05D76A4B46EB.extra
[task 2021-09-22T06:25:53.578Z] 06:25:53 INFO - PROCESS-CRASH | dom/html/test/test_fullscreen-api-race.html | application crashed [@ mozilla::layers::NativeLayerCA::~NativeLayerCA()]
[task 2021-09-22T06:25:53.578Z] 06:25:53 INFO - Mozilla crash reason: MOZ_RELEASE_ASSERT(inUseEntryIter != mInUseEntries.end())
[task 2021-09-22T06:25:53.578Z] 06:25:53 INFO - Crash dump filename: /var/folders/4h/686ck0gj45b85gqm7msj_jqr000014/T/tmpp36terid.mozrunner/minidumps/3D1212CD-1123-408A-934F-05D76A4B46EB.dmp
[task 2021-09-22T06:25:53.578Z] 06:25:53 INFO - Operating system: Mac OS X
[task 2021-09-22T06:25:53.578Z] 06:25:53 INFO - 10.15.7 19H524
[task 2021-09-22T06:25:53.578Z] 06:25:53 INFO - CPU: amd64
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO - family 6 model 158 stepping 10
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO - 12 CPUs
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO -
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO - GPU: UNKNOWN
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO -
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO - Crash reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO - Crash address: 0x0
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO - Process uptime: 38 seconds
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO -
[task 2021-09-22T06:25:53.579Z] 06:25:53 INFO - Thread 0 tid 775 (crashed) - GeckoMain 0 XUL!mozilla::layers::SurfacePoolCA::LockedPool::ReturnSurfaceToPool(CFTypeRefPtr<__IOSurface*>) [SurfacePoolCA.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 181 + 0x11]
Comment 1•4 years ago
|
||
PROCESS-CRASH | dom/html/test/test_fullscreen-api-race.html | application crashed [@ mozilla::layers::NativeLayerCA::~NativeLayerCA()]
Mozilla crash reason: MOZ_RELEASE_ASSERT(inUseEntryIter != mInUseEntries.end())
Crash dump filename: /var/folders/4h/686ck0gj45b85gqm7msj_jqr000014/T/tmpp36terid.mozrunner/minidumps/3D1212CD-1123-408A-934F-05D76A4B46EB.dmp
Operating system: Mac OS X
10.15.7 19H524
CPU: amd64
family 6 model 158 stepping 10
12 CPUs
GPU: UNKNOWN
Crash reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
Crash address: 0x0
Process uptime: 38 seconds
Thread 0 tid 775 (crashed) - GeckoMain 0 XUL!mozilla::layers::SurfacePoolCA::LockedPool::ReturnSurfaceToPool(CFTypeRefPtr<__IOSurface*>) [SurfacePoolCA.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 181 + 0x11]
rax = 0x000000010e6bcf8f rdx = 0x000000000000000a
rcx = 0x00000001052d23d8 rbx = 0x0000000121008830
rsi = 0x0000000000000005 rdi = 0x000000000000002f
rbp = 0x00007ffeea9b7b50 rsp = 0x00007ffeea9b7a20
r8 = 0x000000000000000a r9 = 0x0000000129b1dec0
r10 = 0x0000000000004fc2 r11 = 0x0000000000000202
r12 = 0x00000001210087f0 r13 = 0x0000000129b1dec0
r14 = 0x000000011a349b80 r15 = 0x000000011f482300
rip = 0x0000000107dd6ad7
Found by: given as instruction pointer in context
1 XUL!mozilla::layers::NativeLayerCA::~NativeLayerCA() [NativeLayerCA.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 641 + 0x57]
rbx = 0x0000000121008830 rbp = 0x00007ffeea9b7ba0
rsp = 0x00007ffeea9b7b60 r12 = 0x00000001210087f0
r13 = 0x0000000129b1dec0 r14 = 0x000000011a349b80
r15 = 0x000000011f482300 rip = 0x0000000107dd13ac
Found by: call frame info
2 XUL!mozilla::layers::NativeLayerCA::~NativeLayerCA() [NativeLayerCA.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 631 + 0xe]
rbx = 0x000000011f482300 rbp = 0x00007ffeea9b7bc0
rsp = 0x00007ffeea9b7bb0 r12 = 0x0000000000000007
r13 = 0x0000000114702800 r14 = 0x000000011a349b80
r15 = 0x0000000000000000 rip = 0x0000000107dd1abe
Found by: call frame info
3 XUL!mozilla::layers::NativeLayerRootCA::SetWindowIsFullscreen(bool) [NativeLayerCA.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 481 + 0x13]
rbx = 0x000000011f482300 rbp = 0x00007ffeea9b7bf0
rsp = 0x00007ffeea9b7bd0 r12 = 0x0000000000000007
r13 = 0x0000000114702800 r14 = 0x000000011a349b80
r15 = 0x0000000000000000 rip = 0x0000000109f0569b
Found by: call frame info
4 XUL!nsCocoaWindow::DoMakeFullScreen(bool, bool) [nsCocoaWindow.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 1675 + 0x17]
rbx = 0x0000000000000000 rbp = 0x00007ffeea9b7c20
rsp = 0x00007ffeea9b7c00 r12 = 0x0000000000000000
r13 = 0x0000000114702800 r14 = 0x0000000000000000
r15 = 0x0000000114702800 rip = 0x000000010b52329b
Found by: call frame info
5 XUL!nsGlobalWindowOuter::SetWidgetFullscreen(FullscreenReason, bool, nsIWidget*, nsIScreen*) [nsGlobalWindowOuter.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 4654 + 0x6]
rbx = 0x000000013283c2c0 rbp = 0x00007ffeea9b7c70
rsp = 0x00007ffeea9b7c30 r12 = 0x0000000000000002
r13 = 0x0000000114702800 r14 = 0x0000000000000000
r15 = 0x0000000000000000 rip = 0x000000010a03498c
Found by: call frame info
6 XUL!MakeWidgetFullscreen(nsGlobalWindowOuter*, FullscreenReason, bool) [nsGlobalWindowOuter.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 4509 + 0x15]
rbx = 0x000000013283c2c0 rbp = 0x00007ffeea9b7d20
rsp = 0x00007ffeea9b7c80 r12 = 0x0000000000000002
r13 = 0x000000013283c2e0 r14 = 0x0000000114702800
r15 = 0x0000000000000000 rip = 0x000000010a0350ff
Found by: call frame info
7 XUL!nsGlobalWindowOuter::SetFullscreenInternal(FullscreenReason, bool) [nsGlobalWindowOuter.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 4601 + 0xd]
rbx = 0x0000000000000000 rbp = 0x00007ffeea9b7d90
rsp = 0x00007ffeea9b7d30 r12 = 0x0000000000000000
r13 = 0x000000013283c2e0 r14 = 0x000000013283c2c0
r15 = 0x0000000000000002 rip = 0x000000010a0343ba
Found by: call frame info
8 XUL!mozilla::dom::ExitFullscreenScriptRunnable::Run() [Document.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 14090 + 0x10]
rbx = 0x00000001327a1730 rbp = 0x00007ffeea9b7dc0
rsp = 0x00007ffeea9b7da0 r12 = 0x00007ffeea9b7e78
r13 = 0x00007ffeea9b7e88 r14 = 0x00000001327a1730
r15 = 0x00000001327a1730 rip = 0x000000010a0a9ff7
Found by: call frame info
9 XUL!nsContentUtils::AddScriptRunner(already_AddRefed<nsIRunnable>) [nsContentUtils.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 5748 + 0x9]
rbx = 0x0000000119020000 rbp = 0x00007ffeea9b7e50
rsp = 0x00007ffeea9b7dd0 r12 = 0x00007ffeea9b7e78
r13 = 0x00007ffeea9b7e88 r14 = 0x00000001327a1730
r15 = 0x00000001327a1730 rip = 0x0000000107eb035b
Found by: call frame info
10 XUL!mozilla::dom::Document::ExitFullscreenInDocTree(mozilla::dom::Document*) [Document.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 14144 + 0x8]
rbx = 0x0000000119020000 rbp = 0x00007ffeea9b7ec0
rsp = 0x00007ffeea9b7e60 r12 = 0x00007ffeea9b7e78
r13 = 0x00007ffeea9b7e88 r14 = 0x0000000119020000
r15 = 0x00000001327a1730 rip = 0x000000010a088bb9
Found by: call frame info
11 XUL!mozilla::dom::Document::OnPageHide(bool, mozilla::dom::EventTarget*, bool) [Document.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 11687 + 0x8]
rbx = 0x0000000000000000 rbp = 0x00007ffeea9b7f40
rsp = 0x00007ffeea9b7ed0 r12 = 0x00007ffeea9b7ef0
r13 = 0x0000000119020000 r14 = 0x0000000001040200
r15 = 0x00007ffeea9b7f00 rip = 0x0000000107f2f571
Found by: call frame info
12 XUL!nsDocumentViewer::PageHide(bool) [nsDocumentViewer.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 1388 + 0x15]
rbx = 0x00000c5111af9b68 rbp = 0x00007ffeea9b8030
rsp = 0x00007ffeea9b7f50 r12 = 0x0000000000000000
r13 = 0x0000000000000001 r14 = 0x0000000000000001
r15 = 0x000000011db93ef0 rip = 0x00000001084e8681
Found by: call frame info
13 XUL!nsDocShell::FirePageHideNotificationInternal(bool, bool) [nsDocShell.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 1097 + 0x10]
rbx = 0x0000000000000000 rbp = 0x00007ffeea9b80f0
rsp = 0x00007ffeea9b8040 r12 = 0x0000000000000001
r13 = 0x0000000000000001 r14 = 0x000000011db93ef0
r15 = 0x000000011e118c00 rip = 0x0000000108777a90
Found by: call frame info
14 XUL!nsDocShell::Destroy() [nsDocShell.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 4385 + 0xf]
rbx = 0x0000000121030800 rbp = 0x00007ffeea9b8140
rsp = 0x00007ffeea9b8100 r12 = 0x00007ffeea9b8108
r13 = 0x000000011e118c00 r14 = 0x00000001134b1e00
r15 = 0x000000011e118d90 rip = 0x0000000108773b70
Found by: call frame info
15 XUL!mozilla::AppWindow::Destroy() [AppWindow.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 631 + 0xa]
rbx = 0x0000000121030800 rbp = 0x00007ffeea9b81a0
rsp = 0x00007ffeea9b8150 r12 = 0x000000011a65e200
r13 = 0x0000000000000003 r14 = 0x000000011a65e210
r15 = 0x000000011f0f76a0 rip = 0x0000000108795c20
Found by: call frame info
16 XUL!{virtual override thunk({offset(-8)}, nsChromeTreeOwner::Destroy())} + 0x12
rbx = 0x0000000113408308 rbp = 0x00007ffeea9b81b0
rsp = 0x00007ffeea9b81b0 r12 = 0x000000012067a000
r13 = 0x0000000000000003 r14 = 0x000000013283c2c0
r15 = 0x000000010ef0b420 rip = 0x000000010c0850e2
Found by: call frame info
17 XUL!nsGlobalWindowOuter::ReallyCloseWindow() [nsGlobalWindowOuter.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 6355 + 0x9]
rbx = 0x0000000113408308 rbp = 0x00007ffeea9b81d0
rsp = 0x00007ffeea9b81c0 r12 = 0x000000012067a000
r13 = 0x0000000000000003 r14 = 0x000000013283c2c0
r15 = 0x000000010ef0b420 rip = 0x000000010a039fab
Found by: call frame info
18 XUL!nsCloseEvent::Run() [nsGlobalWindowOuter.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 6156 + 0x5]
rbx = 0x000000000000000c rbp = 0x00007ffeea9b81e0
rsp = 0x00007ffeea9b81e0 r12 = 0x000000012067a000
r13 = 0x0000000000000003 r14 = 0x000000011a1fe760
r15 = 0x000000010ef0b420 rip = 0x000000010a03bc0b
Found by: call frame info
19 XUL!mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) [TaskController.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 770 + 0x263]
rbx = 0x000000000000000c rbp = 0x00007ffeea9b8800
rsp = 0x00007ffeea9b81f0 r12 = 0x000000012067a000
r13 = 0x0000000000000003 r14 = 0x000000011a1fe760
r15 = 0x000000010ef0b420 rip = 0x0000000107828ee6
Found by: call frame info
20 XUL!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 1148 + 0x3f]
rbx = 0x00007ffeea9b8a00 rbp = 0x00007ffeea9b8a80
rsp = 0x00007ffeea9b8810 r12 = 0x0000000105561740
r13 = 0x0000000113435820 r14 = 0x0000000113466460
r15 = 0x0000000113435820 rip = 0x0000000107837648
Found by: call frame info
21 XUL!NS_ProcessPendingEvents(nsIThread*, unsigned int) [nsThreadUtils.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 431 + 0x1e]
rbx = 0x0000000000000000 rbp = 0x00007ffeea9b8ad0
rsp = 0x00007ffeea9b8a90 r12 = 0x00007ffeea9b8a9f
r13 = 0x0000000113435820 r14 = 0x0000000107836f80
r15 = 0x0000000000055c9d rip = 0x0000000107834f5b
Found by: call frame info
22 XUL!nsAppShell::ProcessGeckoEvents(void*) [nsAppShell.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 501 + 0x50]
rbx = 0x0000000000000000 rbp = 0x00007ffeea9b8b30
rsp = 0x00007ffeea9b8ae0 r12 = 0x0000000000000001
r13 = 0x00000001134a97e0 r14 = 0x0000000113435820
r15 = 0x0000000600002e00 rip = 0x0000000108404b9a
Found by: call frame info
23 CoreFoundation!__CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 0x11
rbx = 0x0000000108404a90 rbp = 0x00007ffeea9b8b40
rsp = 0x00007ffeea9b8b40 r12 = 0x0000000000000001
r13 = 0x0000000000002e01 r14 = 0x00000001134a97e0
r15 = 0x0000000600002e88 rip = 0x00007fff3746ed52
Found by: call frame info
24 CoreFoundation!__CFRunLoopDoSource0 + 0x67
rbp = 0x00007ffeea9b8b70 rsp = 0x00007ffeea9b8b50
rip = 0x00007fff3746ecf1
Found by: previous frame's frame pointer
25 CoreFoundation!__CFRunLoopDoSources0 + 0xd1
rbp = 0x00007ffeea9b8be0 rsp = 0x00007ffeea9b8b80
rip = 0x00007fff3746eb0b
Found by: previous frame's frame pointer
26 CoreFoundation!__CFRunLoopRun + 0x39f
rbp = 0x00007ffeea9b98f0 rsp = 0x00007ffeea9b8bf0
rip = 0x00007fff3746d83a
Found by: previous frame's frame pointer
27 CoreFoundation!CFRunLoopRunSpecific + 0x1ce
rbp = 0x00007ffeea9b9980 rsp = 0x00007ffeea9b9900
rip = 0x00007fff3746ce3e
Found by: previous frame's frame pointer
28 HIToolbox!RunCurrentEventLoopInMode + 0x124
rbp = 0x00007ffeea9b99d0 rsp = 0x00007ffeea9b9990
rip = 0x00007fff36099abd
Found by: previous frame's frame pointer
29 HIToolbox!ReceiveNextEventCommon + 0x248
rbx = 0x0000000000000001 rbp = 0x00007ffeea9b9a50
rsp = 0x00007ffeea9b99e0 r12 = 0x0000000000000000
r13 = 0x0000000000000000 r14 = 0x0000000000000000
r15 = 0x00000000ffffd96d rip = 0x00007fff360997d5
Found by: call frame info
30 HIToolbox!_BlockUntilNextEventMatchingListInModeWithFilter + 0x40
rbx = 0xffffffffffffffff rbp = 0x00007ffeea9b9a70
rsp = 0x00007ffeea9b9a60 r12 = 0x0000000000000001
r13 = 0x0000000000000000 r14 = 0x00007fff97c1e4c0
r15 = 0x00007fff8ed21b00 rip = 0x00007fff36099579
Found by: call frame info
31 AppKit!_DPSNextEvent + 0x373
rbx = 0xffffffffffffffff rbp = 0x00007ffeea9b9e70
rsp = 0x00007ffeea9b9a80 r12 = 0x0000000000000001
r13 = 0x0000000000000000 r14 = 0x00007fff97c1e4c0
r15 = 0x00007fff8ed21b00 rip = 0x00007fff346df039
Found by: call frame info
32 AppKit!-[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 0x548
rbp = 0x00007ffeea9ba0d0 rsp = 0x00007ffeea9b9e80
rip = 0x00007fff346dd880
Found by: previous frame's frame pointer
33 XUL!-[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [nsAppShell.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 173 + 0x25]
rbp = 0x00007ffeea9ba140 rsp = 0x00007ffeea9ba0e0
rip = 0x0000000108404121
Found by: previous frame's frame pointer
34 AppKit!-[NSApplication run] + 0x292
rbx = 0x000000010555a660 rbp = 0x00007ffeea9ba200
rsp = 0x00007ffeea9ba150 r12 = 0x0000000133903050
r13 = 0x00007fff701c0800 r14 = 0x0000000000000000
r15 = 0x000000011c924430 rip = 0x00007fff346cf58e
Found by: call frame info
35 XUL!nsAppShell::Run() [nsAppShell.mm:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 775 + 0x1a]
rbp = 0x00007ffeea9ba230 rsp = 0x00007ffeea9ba210
rip = 0x000000010840542b
Found by: previous frame's frame pointer
36 XUL!nsAppStartup::Run() [nsAppStartup.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 289 + 0xa]
rbx = 0x0000000114769100 rbp = 0x00007ffeea9ba260
rsp = 0x00007ffeea9ba240 r14 = 0x00007ffeea9ba2f4
rip = 0x000000010c27686c
Found by: call frame info
37 XUL!XREMain::XRE_mainRun() [nsAppRunner.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 5291 + 0xd]
rbx = 0x00007ffeea9ba2e0 rbp = 0x00007ffeea9ba400
rsp = 0x00007ffeea9ba270 r14 = 0x00007ffeea9ba2f4
rip = 0x00000001088593e1
Found by: call frame info
38 XUL!XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [nsAppRunner.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 5476 + 0x8]
rbx = 0x0000000105516510 rbp = 0x00007ffeea9ba490
rsp = 0x00007ffeea9ba410 r12 = 0x000000010555a920
r13 = 0x0000000000000000 r14 = 0x0000000000000000
r15 = 0x00007ffeea9ba4a0 rip = 0x000000010c2f8a4f
Found by: call frame info
39 XUL!XRE_main(int, char**, mozilla::BootstrapConfig const&) [nsAppRunner.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 5535 + 0x10]
rbx = 0x0000000000000005 rbp = 0x00007ffeea9ba5d0
rsp = 0x00007ffeea9ba4a0 r12 = 0x00007ffeea9ba4a0
r13 = 0x00007ffeea9baa60 r14 = 0x00007ffeea9ba610
r15 = 0x00007ffeea9baa60 rip = 0x000000010c2f8f35
Found by: call frame info
40 firefox!main [nsBrowserApp.cpp:b6fd434586384c1ff3e4059dee52e465e7a63d49 : 386 + 0x70]
rbx = 0x00007ffeea9ba5fc rbp = 0x00007ffeea9baa40
rsp = 0x00007ffeea9ba5e0 r12 = 0x0000000105246d1b
r13 = 0x00007ffeea9baa60 r14 = 0x00007ffeea9ba610
r15 = 0x00007ffeea9ba66d rip = 0x00000001052463c2
Found by: call frame info
41 libdyld.dylib!start + 0x1
rbx = 0x0000000000000000 rbp = 0x00007ffeea9baa50
rsp = 0x00007ffeea9baa50 r12 = 0x0000000000000000
r13 = 0x0000000000000000 r14 = 0x0000000000000000
r15 = 0x0000000000000000 rip = 0x00007fff71375cc9
Found by: call frame info
| Assignee | ||
Comment 3•4 years ago
|
||
Can't replicate. It's possible this is an Out of Memory situation resolved by the patch for Bug 1732230. I'll keep this open to see if it is disappears after that patch lands.
| Assignee | ||
Comment 4•4 years ago
|
||
The crash signature doesn't make this very clear, but the crash occurs when we attempt to return mFrontSurface to the pool. I'll see if we can add some more tracking or asserts around the handling of mFrontSurface to catch this problem earlier.
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 10•4 years ago
|
||
This may have been fixed by Bug 1736446. Whether or not that is the case, that Bug reveals that NativeLayerRootCA needs to be made resilient to concurrent access. There's more we can do to improve access and I'll do that in a patch for this Bug.
| Assignee | ||
Comment 11•4 years ago
|
||
In addition to adding locks around the accessors, this also removes the call
to CommitToScreen from the fullscreen accessor, which was probably
redundant and definitely made the main thread call Commit which introduces
possible concurrency errors.
Comment 12•4 years ago
|
||
Comment 13•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Description
•