Bug 1731956: Make NativeLayerRootCA fullscreen and mouse move accessors thread safe. r=mstange

In addition to adding locks around the accessors, this also removes the call
to `CommitToScreen` from the fullscreen accessor, which was probably
redundant and definitely made the main thread call `Commit` which introduces
possible concurrency errors.

Differential Revision: https://phabricator.services.mozilla.com/D129425