gfx/layers/NativeLayerCA.h
@@ -120,7 +120,6 @@ class NativeLayerRootCA : public NativeLayerRoot {
       bool aIsOpaque) override;
 
   void SetWindowIsFullscreen(bool aFullscreen);
-  void NoteMouseMove();
   void NoteMouseMoveAtTime(const TimeStamp& aTime);
 
  protected:
@@ -145,7 +144,7 @@ class NativeLayerRootCA : public NativeLayerRoot {
   template <typename F>
   void ForAllRepresentations(F aFn);
 
-  void UpdateMouseMovedRecently();
+  void UpdateMouseMovedRecently(const MutexAutoLock& aProofOfLock);
 
   Mutex mMutex;  // protects all other fields
   Representation mOnscreenRepresentation;
